// Code generated by oracle. DO NOT EDIT.

syntax = "proto3";

package api.channel;

option go_package = "github.com/synnaxlabs/synnax/pkg/api/channel/pb";

import "core/pkg/distribution/channel/pb/channel.proto";

message Channel {
  uint32 key = 1;
  string name = 2;
  uint32 leaseholder = 3;
  string data_type = 4;
  int64 density = 5;
  bool is_index = 6;
  uint32 index = 7;
  string alias = 8;
  bool virtual = 9;
  bool internal = 10;
  string expression = 11;
  repeated distribution.channel.Operation operations = 12;
}
